<resources>
    <string name="app_name">SC Uber</string>
    <string name="todo">TODO</string>
    <string name="current_reservation">Current\nReservation</string>
    <string name="designation_hint">목적지</string>
    <string name="request">Request</string>
    <string name="start_hint">출발지</string>
    <string name="my_page">my_page</string>
    <string name="current_requests">current_requests</string>
    <string name="giver_accept_title">Dont be Late! \n SC Ubers are Waiting For you!</string>
    <string name="late">Late\n(1pt)</string>
    <string name="noshowpoint">NoShow (2pt)</string>
    <string name="noshowpoints">NoShow (2pt)</string>
    <string name="attempted">Trials\nAttempted</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
