<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/FullpageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/MapLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageButton
                android:id="@+id/imgbtn_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/campusmap"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:timePickerMode="spinner">

        </TimePicker>

        <LinearLayout
            android:id="@+id/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/btn_from"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:hint="@string/start_hint"
                android:inputType="textPersonName"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/imgbtn_swap"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/arrow3" />

            <EditText
                android:id="@+id/btn_to"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:hint="@string/designation_hint"
                android:inputType="textPersonName"
                android:textSize="25sp" />

            <TableRow
                android:id="@+id/RequestLayout"
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_request"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/request" />
            </TableRow>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ChangeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_mypage"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@color/md_material_blue_600"
                    android:text="@string/my_page"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_requests"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@color/md_material_blue_800"
                    android:text="@string/current_reservation"
                    android:textColor="@android:color/black" />
            </TableRow>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>