<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?attr/actionModeBackground"
            android:gravity="center"
            android:text="NoShow History"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="210dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:drawable/bottom_bar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Type"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/attempted"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Penalty"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/noshowpoints"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="횟수"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="8"
                android:textAlignment="center"
                android:textColor="@color/md_edittext_error"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="points"
                android:textAlignment="textStart"
                android:textColor="@color/md_edittext_error"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/late"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="횟수"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="15"
                android:textAlignment="center"
                android:textColor="@color/md_edittext_error"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="points"
                android:textAlignment="textStart"
                android:textColor="@color/md_edittext_error"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Total"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="횟수"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="15"
                android:textAlignment="center"
                android:textColor="@color/md_edittext_error"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="points"
                android:textAlignment="textStart"
                android:textColor="@color/md_edittext_error"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:text="Close"
        android:textSize="10sp"
        android:textStyle="bold" />

</LinearLayout>